@@ -1,78 +1,64 @@
 package com.coolerpromc.productiveslimes.compat.rei.Melting;
 
 import com.coolerpromc.productiveslimes.ProductiveSlimes;
-import com.coolerpromc.productiveslimes.compat.rei.DnaSynthesizing.DnaSynthesizingRecipeDisplay;
 import com.coolerpromc.productiveslimes.recipe.MeltingRecipe;
-import com.mojang.serialization.Codec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
 import me.shedaniel.rei.api.common.display.Display;
 import me.shedaniel.rei.api.common.display.DisplaySerializer;
-import me.shedaniel.rei.api.common.display.basic.BasicDisplay;
 import me.shedaniel.rei.api.common.entry.EntryIngredient;
 import me.shedaniel.rei.api.common.util.EntryIngredients;
-import me.shedaniel.rei.api.common.util.EntryStacks;
-import net.minecraft.network.codec.ByteBufCodecs;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.network.codec.StreamCodec;
+import net.minecraft.resources.ResourceKey;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.crafting.RecipeHolder;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 
-public class MeltingRecipeDisplay extends BasicDisplay {
-    private final int energy;
-    private final int inputCount;
+public record MeltingRecipeDisplay(RecipeHolder<MeltingRecipe> recipe) implements Display {
     public static final CategoryIdentifier<? extends MeltingRecipeDisplay> CATEGORY = CategoryIdentifier.of(ProductiveSlimes.MODID, "melting");
-
 
     public static final DisplaySerializer<MeltingRecipeDisplay> SERIALIZER = DisplaySerializer.of(
             RecordCodecBuilder.mapCodec(instance -> instance.group(
-                    EntryIngredient.codec().listOf().fieldOf("ingredients").forGetter(MeltingRecipeDisplay::getInputEntries),
-                    EntryIngredient.codec().listOf().fieldOf("output").forGetter(MeltingRecipeDisplay::getOutputEntries),
-                    Codec.INT.fieldOf("inputCount").forGetter(MeltingRecipeDisplay::getInputCount),
-                    Codec.INT.fieldOf("energy").forGetter(MeltingRecipeDisplay::getEnergy)
-            ).apply(instance, MeltingRecipeDisplay::new)),
+                    ResourceLocation.CODEC.fieldOf("recipeId").forGetter(display -> display.recipe.id().location()),
+                    MeltingRecipe.Serializer.CODEC.fieldOf("ingredients").forGetter(display -> display.recipe.value())
+            ).apply(instance, (ResourceLocation recipeId, MeltingRecipe recipe) -> new MeltingRecipeDisplay(new RecipeHolder<>(ResourceKey.create(Registries.RECIPE, recipeId), recipe)))),
             StreamCodec.composite(
-                    EntryIngredient.streamCodec().apply(ByteBufCodecs.list()),
-                    MeltingRecipeDisplay::getInputEntries,
-                    EntryIngredient.streamCodec().apply(ByteBufCodecs.list()),
-                    MeltingRecipeDisplay::getOutputEntries,
-                    ByteBufCodecs.INT,
-                    MeltingRecipeDisplay::getInputCount,
-                    ByteBufCodecs.INT,
-                    MeltingRecipeDisplay::getEnergy,
-                    MeltingRecipeDisplay::new
+                    ResourceLocation.STREAM_CODEC,
+                    display -> display.recipe.id().location(),
+                    MeltingRecipe.Serializer.STREAM_CODEC,
+                    display -> display.recipe.value(),
+                    (recipeId, recipe) -> new MeltingRecipeDisplay(new RecipeHolder<>(ResourceKey.create(Registries.RECIPE, recipeId), recipe))
             )
     );
 
-    public MeltingRecipeDisplay(RecipeHolder<MeltingRecipe> recipe) {
-        super(List.of(EntryIngredients.of(new ItemStack(recipe.value().inputItems().getFirst().items().findFirst().get(), recipe.value().inputCount())),
-                        EntryIngredients.of(new ItemStack(Items.BUCKET, recipe.value().output().getFirst().getCount()))),
-                List.of(EntryIngredient.of(EntryStacks.of(recipe.value().output().getFirst()))));
-
-        energy = recipe.value().energy();
-        inputCount = recipe.value().inputCount();
+    @Override
+    public List<EntryIngredient> getInputEntries() {
+        List<EntryIngredient> entryIngredients = new ArrayList<>();
+        entryIngredients.add(EntryIngredients.of(new ItemStack(recipe.value().inputItems().ingredient().getValues().get(0), recipe.value().inputItems().count())));
+        entryIngredients.add(EntryIngredients.of(new ItemStack(Items.BUCKET, recipe.value().output().getFirst().getCount())));
+        return entryIngredients;
     }
 
-    public MeltingRecipeDisplay(List<EntryIngredient> input, List<EntryIngredient> output, int inputCount, int energy) {
-        super(input, output);
-        this.energy = energy;
-        this.inputCount = inputCount;
-    }
-
-    public int getEnergy() {
-        return energy;
-    }
-
-    public int getInputCount() {
-        return inputCount;
+    @Override
+    public List<EntryIngredient> getOutputEntries() {
+        return List.of(EntryIngredients.ofItemStacks(recipe.value().output()));
     }
 
     @Override
     public CategoryIdentifier<?> getCategoryIdentifier() {
         return CATEGORY;
+    }
+
+    @Override
+    public Optional<ResourceLocation> getDisplayLocation() {
+        return Optional.of(recipe.id().location());
     }
 
     @Override
